--- a/index.html
+++ b/index.html
@@ -10,6 +10,126 @@
 </head>
 
 <body>
+   <!--акция таймер-->
+   <!--
+   <h1>Акция <span hidden>закончена</span></h1>
+   <div id="timer"></div>
+   -->
+   <!--Розвернуть и свернуть-->
+   <!--
+   <style>
+      .info {
+         width: 300px;
+         height: 200px;
+         border: 25px solid black;
+         padding: 20px;
+         overflow: auto;
+         margin-left: 35px;
+         margin-top: 55px;
+      }
+   </style>
+   <button onclick="show()" id="text">розвернуть</button>
+   <div class="info">
+      <div class="">
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nesciunt praesentium, totam tempora
+         cupiditate dolorem eligendi, ullam velit vel eaque odit ratione est facilis possimus consectetur aut aliquam
+         veniam quisquam! Ratione id quaerat porro doloribus, ad deleniti suscipit mollitia velit, itaque possimus nemo
+         inventore iusto exercitationem! Accusantium obcaecati amet rem commodi nesciunt animi tempore suscipit. Eveniet
+         dicta incidunt ad dolorem quae error iusto, similique quidem nobis sed odio porro suscipit, aperiam omnis
+         deserunt iure perspiciatis exercitationem? Sint neque dolores adipisci natus maxime, rerum, obcaecati dicta,
+         consequatur explicabo pariatur animi officiis distinctio! Ipsum numquam iusto ea fugiat quas veniam odit
+         pariatur.lorem100
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. In, maiores architecto dolor vel voluptate
+         consequatur, assumenda voluptatum blanditiis distinctio optio perspiciatis sit rem. Sunt, numquam. Rerum sunt
+         sapiente sint nihil perferendis? Molestiae eligendi mollitia excepturi dolores consequuntur deserunt alias
+         voluptatem, corporis quam quod nostrum reiciendis, at blanditiis doloremque quasi. Expedita neque earum nihil
+         numquam officia repellendus reiciendis a excepturi nemo consequatur, cumque quisquam dolorum magnam ratione
+         facere tenetur, temporibus possimus hic voluptatibus rerum vitae. Vitae a eveniet eius culpa, odit animi
+         aspernatur ducimus dicta molestiae unde excepturi! Illum aliquam ratione aut? Minima enim cupiditate vitae at
+         dignissimos consequuntur eius fugit.
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas recusandae quis eum fugit iure consectetur
+         fugiat placeat eveniet tempore maiores ipsam tenetur totam suscipit, sint repellat obcaecati odit. Corporis
+         exercitationem dolorem dolor nostrum eveniet necessitatibus, iusto suscipit, recusandae provident tempore id
+         non commodi animi quaerat? Optio eaque voluptate soluta! Iusto commodi facilis, quae aliquam laudantium
+         voluptates veniam tenetur quidem possimus ipsum expedita accusantium mollitia maxime aperiam distinctio fugit
+         soluta non modi eligendi, pariatur, placeat aliquid. Voluptatum, quo. Maiores facere non numquam. Incidunt in
+         aliquam cumque aut unde sapiente velit dignissimos sequi! Aspernatur, voluptatum. At, quaerat ea voluptas
+         similique, optio ratione ab veritatis repudiandae itaque officia qui iusto repellat eligendi quas! Cumque
+         temporibus aperiam ab vero id, dolorem beatae accusamus praesentium! Tempora, nisi fuga? Quasi ea temporibus
+         ipsum laboriosam velit voluptatibus aliquam impedit placeat minima in dolore aspernatur illo quaerat excepturi
+         beatae voluptate, inventore est culpa iste. Est quasi quod eaque? Aperiam maxime, qui laborum culpa quasi
+         accusamus, molestiae, explicabo repellendus eius voluptates rerum commodi recusandae architecto amet vitae
+         perspiciatis numquam consequatur atque similique sed voluptatum! Velit reprehenderit sed aliquam necessitatibus
+         ex quos, porro error ipsam excepturi corporis placeat pariatur laborum sint et dolor dolorum? Architecto
+         dolores ducimus facere! Magni explicabo omnis dolores. Tempore praesentium commodi minima maxime aliquam
+         placeat deleniti excepturi accusantium veniam libero eaque voluptatibus repellat aliquid voluptas quaerat est,
+         sint voluptates similique repudiandae provident dolorem reiciendis rerum, cupiditate repellendus. Facilis iste
+         ab delectus maiores fuga error cumque aperiam enim natus accusantium numquam nam, eos, tempora animi, earum
+         amet beatae cupiditate atque esse porro. Delectus tempora deleniti blanditiis odit aperiam, reprehenderit
+         ducimus voluptates, quisquam ipsa, saepe sunt aut doloribus? Aperiam aliquam eligendi ullam alias soluta sunt
+         id consectetur aliquid ea omnis tempore sit minus natus quisquam maxime beatae, fugit earum ratione iure fugiat
+         est. Nesciunt nam vel eius distinctio!
+      </div>
+   </div>
+-->
+   <!--Текст стайл кнопка-->
+   <!--
+   <button onclick="show()">отрпавить</button>
+   <input type="text" placeholder="text" class="text">
+   <input type="text" placeholder=" new class" class="class">
+   <br>
+   <button onclick="showStyle()">отрпавить</button>
+   <input type="text" placeholder="class" class="class-style">
+   <input type="text" placeholder="color" class="text-style">
+   <input type="text" placeholder="font-size" class="text-style-fs">
+-->
+   <!--акция setTimeout-->
+   <!--
+   <style>
+      .action {
+         width: 100px;
+         height: 50px;
+         background-color: red;
+         border: 5px solid orange;
+         position: fixed;
+         right: 20px;
+      }
+      div>p {
+         font-weight: bold;
+         font-family: sans-serif;
+         text-align: center;
+      }
+   </style>
+   <div class=action>
+      <p>Cкидка 15%</p>
+   </div>
+-->
+   <!--футбольный мяч-->
+   <!--
+   <style>
+      #field {
+         width: 500px;
+         height: 300px;
+         border: 10px solid black;
+         background-color: #00FF00;
+         position: relative;
+         overflow: hidden;
+         cursor: pointer;
+      }
+
+      #ball {
+         position: absolute;
+         left: 0;
+         top: 0;
+         width: 40px;
+         height: 40px;
+         transition: all 1s;
+      }
+   </style>
+   <div id="field">
+      <img src="https://ru.js.cx/clipart/ball.svg" id="ball">
+   </div>
+-->
    <script src="script.js"></script>
 </body>
 
