--- a/index.html
+++ b/index.html
@@ -130,6 +130,221 @@
       <img src="https://ru.js.cx/clipart/ball.svg" id="ball">
    </div>
 -->
+   <!--Фото кота-->
+   <!--
+   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVrOgFryx_MHqlqif30luBEAAieHqBOd3sfA&usqp=CAU"
+      style="width: 400px" id="test" onmouseover="over(this)" onmouseout="out(this)"></img>
+-->
+   <!--Кнопка считает-->
+   <!--
+   <input type="submit" style="width: 300px" onclick="add()" value="0" id="test">
+   -->
+   <!--Додати-->
+   <!--
+   <div style="display: flex;">
+      <input type="text" id="one">
+      +
+      <input type="text" id="two">
+      =
+      <span class="sum">?</span>
+   </div>
+   <br>
+   <button onclick="add()" style="width:150px">додати</button>
+-->
+   <!--Калькулятор-->
+   <!--
+   <div id="calc">
+      <input type="text" id="display" disabled>
+      <div class="button button-c" title="Очистить" data-type="C">C</div>
+      <div class="button" data-type="7">7</div>
+      <div class="button" data-type="8">8</div>
+      <div class="button" data-type="9">9</div>
+      <div class="button" data-type="/">&divide;</div>
+      <div class="button" data-type="4">4</div>
+      <div class="button" data-type="5">5</div>
+      <div class="button" data-type="6">6</div>
+      <div class="button" data-type="*">&times;</div>
+      <div class="button" data-type="1">1</div>
+      <div class="button" data-type="2">2</div>
+      <div class="button" data-type="3">3</div>
+      <div class="button" data-type="-">-</div>
+      <div class="button" data-type="0">0</div>
+      <div class="button" data-type=".">.</div>
+      <div class="button" data-type="=">=</div>
+      <div class="button" data-type="+">+</div>
+   </div>
+   <style>
+      #calc {
+         width: 200px;
+         padding: 2px;
+         padding-bottom: 4px;
+         border: 1px solid #000;
+         font-size: 0;
+         margin: 0 auto;
+         position: relative;
+      }
+
+      #display {
+         display: block;
+         width: 185px;
+         height: 30px;
+         border: 1px solid #000;
+         margin: 0 auto;
+         margin: 4px;
+         text-align: right;
+         outline: 0;
+         background: #fff;
+         padding-right: 5px;
+      }
+
+      .button {
+         width: 40px;
+         height: 30px;
+         line-height: 30px;
+         display: inline-block;
+         cursor: pointer;
+         border: 1px solid #000;
+         margin: 4px;
+         font-size: 16px;
+         text-align: center;
+         transition: background .1s color .1s;
+      }
+
+      .button:hover {
+         background: #000;
+         color: #fff;
+      }
+
+      .button-c {
+         position: absolute;
+         left: 8px;
+         top: 8px;
+         width: 20px;
+         height: 20px;
+         font-size: 12px;
+         line-height: 20px;
+      }
+   </style>
+   -->
+   <!--гра хрестики нолики-->
+   <!--
+   <div id="game">
+      <div class="cell" data-id="0"></div>
+      <div class="cell" data-id="1"></div>
+      <div class="cell" data-id="2"></div>
+      <div class="cell" data-id="3"></div>
+      <div class="cell" data-id="4"></div>
+      <div class="cell" data-id="5"></div>
+      <div class="cell" data-id="6"></div>
+      <div class="cell" data-id="7"></div>
+      <div class="cell" data-id="8"></div>
+   </div>
+   <p id="message">
+      Ходит: x
+   </p>
+   <input type="button" id="restart" value="Начать сначала">
+   <div id="statistics">
+      <p>
+         Выиграл <b>x</b>: <span id="win_x">0</span>
+      </p>
+      <p>
+         Выиграл <b>0</b>: <span id="win_0">0</span>
+      </p>
+      <p>
+         Ничья: <span id="win_draw">0</span>
+      </p>
+   </div>
+   <style>
+      #game {
+         width: 156px;
+         border: 1px solid #000;
+         margin: 0 auto;
+         font-size: 0;
+      }
+
+      .cell {
+         width: 50px;
+         height: 50px;
+         line-height: 50px;
+         text-align: center;
+         font-family: arial;
+         display: inline-block;
+         font-size: 26px;
+         border: 1px solid #000;
+         cursor: pointer;
+         vertical-align: middle;
+         transition: background .1s;
+      }
+
+      .cell:hover {
+         background: #eee;
+      }
+
+      #message {
+         text-align: center
+      }
+
+      #restart {
+         margin: 0 auto;
+         display: block;
+      }
+
+      #statistics {
+         position: absolute;
+         right: 10px;
+         top: 10px;
+         border: 1px solid;
+         padding: 0 20px;
+         display: inline-block;
+      }
+   </style>
+   -->
+   <!--game number-->
+   <!--
+   <div id="game">
+      <input type="button" id="start" value="Начать">
+      <div id="timer">Начиная с "1" нажимайте на числа до тех пор, пока не дойдете до последнего</div>
+      <table id="game_table"></table>
+      <input type="button" id="restart" value="Начать сначала">
+   </div>
+   <style>
+      #timer {
+         min-height: 50px;
+         text-align: center;
+      }
+
+      #game_table {
+         border: 1px solid #000;
+         margin: 0 auto;
+         border-radius: 2px;
+      }
+
+      #start {
+         margin: 0 auto;
+         display: block;
+      }
+
+      #restart {
+         display: none;
+         margin: 20px auto;
+      }
+
+      .td {
+         width: 50px;
+         height: 50px;
+         line-height: 30px;
+         font-weight: bold;
+         border: 1px solid #000;
+         text-align: center;
+         border-radius: 2px;
+         cursor: pointer;
+      }
+
+      .td.select {
+         background: #c00;
+      }
+   </style>
+   -->
    <script src="script.js"></script>
 </body>
 
