--- a/index.html
+++ b/index.html
@@ -345,7 +345,86 @@
       }
    </style>
    -->
-   <script src="script.js"></script>
+   <!--scroll повильно-->
+   <!--
+   <style>
+      #up {
+         position: fixed;
+         right: 25px;
+         bottom: 25px;
+         color: blue;
+         background-color: white;
+         font-size: 40px;
+         border-radius: 50px;
+         cursor: pointer;
+      }
+
+      #open {
+         position: fixed;
+         right: 100px;
+         bottom: 35px;
+      }
+
+      #block {
+         position: fixed;
+         top: 100px;
+         right: 50px;
+         display: grid;
+         visibility: hidden;
+         border: black solid 4px;
+         padding: 5px;
+      }
+
+      #test {
+         position: fixed;
+         right: 100px;
+         bottom: 40px;
+      }
+   </style>
+   <button id="goinfo" onclick="info()">info</button>
+   <button onclick="up()" id="up">up</button>
+   ----block чат-----
+   <button onclick="go()" id="test">чат</button>
+   <div id="block">
+      <input type="text" style="margin-bottom: 4px;">
+      <input type="text" style="margin-bottom: 4px;">
+      <input type="submit" style="margin-bottom:4px;">
+      <button onclick="exid()" class="exid" style="margin-bottom: 4px;">закрить</button>
+   </div>
+   <p style="width: 100px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsa assumenda incidunt
+      commodi qui inventore sit
+      accusantium quos ullam magni voluptatibus itaque minima mollitia, iste omnis libero velit quibusdam consequatur
+      nobis nam similique illo? Exercitationem, fugiat est, dolore perspiciatis quo esse quibusdam eius nostrum a
+      quisquam, et fuga necessitatibus culpa odio inventore totam sed alias vero dolor distinctio. Cupiditate
+      praesentium at aliquid sequi et, ex totam accusantium eveniet culpa unde nobis labore dolores sint ipsum, cum
+      quia
+      animi a suscipit ad odit esse quaerat! Accusantium aspernatur in ab eos quos ex rerum quam vel, sunt quia
+      officiis
+      sequi nostrum id quasi? Possimus rerum amet quos. Molestias sit ratione debitis minus at obcaecati ipsam in?
+      Nihil
+      cumque odio expedita, voluptatum dolore, nam temporibus ut et facere quo magni aut ullam quia modi suscipit,
+      dolor
+      molestias quasi eveniet nulla? Iste id accusamus ut est corporis quos similique voluptatibus accusantium fugiat
+      distinctio perspiciatis labore libero odio placeat quae cupiditate aspernatur impedit minus saepe, alias non?
+      <span id="info" style="font-weight: bold;">Nobis</span> quaerat voluptas, eos expedita consectetur illo, molestias
+      ullam impedit, quas culpa
+      quisquam
+      explicabo
+      ipsa
+      consequuntur non mollitia architecto quia dicta eius facilis repellendus quae facere. Non, nemo illo
+      consequatur,
+      saepe vero ipsum deleniti animi optio tenetur vitae iusto suscipit atque. Eveniet obcaecati neque facere
+      voluptatum nesciunt! Iusto cupiditate, incidunt iste nulla in, libero deserunt laudantium optio molestias
+      repudiandae aut aspernatur obcaecati. Earum, corrupti perferendis numquam molestias ipsa praesentium doloribus,
+      id
+      reprehenderit sit facere eum! Sed odit nulla perferendis accusamus tenetur, facere architecto aut voluptatem
+      distinctio ea culpa quasi impedit. Culpa deleniti aperiam accusantium iste praesentium, cupiditate, voluptas
+      eveniet cumque nam id magnam officiis sunt qui blanditiis amet numquam atque earum nihil maxime necessitatibus
+      vitae et. Blanditiis necessitatibus aperiam magni sunt aspernatur ipsum ab. Beatae aperiam nisi exercitationem
+      consequatur facere! Aut est doloribus laudantium ad assumenda, illum omnis.
+   </p>
+-->
+   <script src=" script.js"></script>
 </body>
 
 </html>
