--- a/index.html
+++ b/index.html
@@ -424,6 +424,118 @@
       consequatur facere! Aut est doloribus laudantium ad assumenda, illum omnis.
    </p>
 -->
+   <!--game X 0-->
+   <!--
+   <style>
+      .game {
+         width: 156px;
+         border: 1px solid #000;
+         margin: 0 auto;
+         font-size: 0;
+      }
+
+      .num {
+         width: 50px;
+         height: 50px;
+         line-height: 50px;
+         text-align: center;
+         font-family: arial;
+         display: inline-block;
+         font-size: 26px;
+         border: 1px solid #000;
+         cursor: pointer;
+         vertical-align: middle;
+         transition: background .1s;
+      }
+
+      .num:hover {
+         background: rgb(236, 231, 231);
+      }
+
+      .message {
+         text-align: center
+      }
+   </style>
+   <div class="game">
+      <div class="num" id="0"></div>
+      <div class="num" id="1"></div>
+      <div class="num" id="2"></div>
+      <div class="num" id="3"></div>
+      <div class="num" id="4"></div>
+      <div class="num" id="5"></div>
+      <div class="num" id="6"></div>
+      <div class="num" id="7"></div>
+      <div class="num" id="8"></div>
+   </div>
+   <p class="message">
+      Ходить: x
+   </p>
+   -->
+   <!--delete block-->
+   <!--  
+    <style>
+      .block {
+         width: 400px;
+         border: 2px solid black;
+         position: relative;
+         padding: 25px;
+      }
+
+      .close {
+         position: absolute;
+         right: 5px;
+         top: 5px;
+         cursor: pointer;
+      }
+   </style>
+   <p class="block" style="background-color: red;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
+      voluptas iure corporis
+      praesentium
+      obcaecati in voluptate possimus? Voluptatibus officiis incidunt libero eum. Repellat, sequi nostrum quae
+      laudantium non deserunt. Pariatur quod quae quaerat exercitationem odio et nemo voluptates facilis perferendis.
+      <span class="close">x</span>
+   </p>
+   <p class="block" style="background-color: rosybrown;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
+      voluptas iure corporis praesentium
+      obcaecati in voluptate possimus? Voluptatibus officiis incidunt libero eum. Repellat, sequi nostrum quae
+      laudantium non deserunt. Pariatur quod quae quaerat exercitationem odio et nemo voluptates facilis perferendis.
+      <span class="close">x</span>
+   </p>
+   <p class="block" style="background-color: seagreen;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
+      voluptas iure corporis praesentium
+      obcaecati in voluptate possimus? Voluptatibus officiis incidunt libero eum. Repellat, sequi nostrum quae
+      laudantium non deserunt. Pariatur quod quae quaerat exercitationem odio et nemo voluptates facilis perferendis.
+      <span class="close">x</span>
+   </p>
+   -->
+   <!--покрасить таблицу-->
+   <!--
+   <style>
+      td {
+         padding: 25px;
+         border: 5px solid black;
+         cursor: pointer;
+      }
+   </style>
+
+   <table>
+      <tr>
+         <td>1</td>
+         <td>2</td>
+         <td>3</td>
+      </tr>
+      <tr>
+         <td>4</td>
+         <td>5</td>
+         <td>6</td>
+      </tr>
+      <tr>
+         <td>7</td>
+         <td>8</td>
+         <td>9</td>
+      </tr>
+   </table>
+   -->
    <script src=" script.js"></script>
 </body>
 
