--- a/index.html
+++ b/index.html
@@ -536,6 +536,142 @@
       </tr>
    </table>
    -->
+   <!--gallert cats-->
+   <!--
+   <style>
+      #catImg {
+         width: 600px;
+         height: 400px;
+         border: 2px solid grey;
+         padding: 5px;
+      }
+
+      .gallery img {
+         border: 1px solid grey;
+         padding: 3px;
+         margin: 1px;
+         width: 140px;
+         height: 140px;
+         cursor: pointer;
+      }
+   </style>
+   <div>
+      <img id="catImg" src="img/cat1.jpg" alt="cat">
+   </div>
+   <div class="gallery">
+      <img src="img/cat1.jpg" alt="cat">
+      <img src="img/cat2.jpg" alt="cat">
+      <img src="img/cat3.jpg" alt="cat">
+      <img src="img/cat4.jpg" alt="cat">
+      <img src="img/cat5.jpg" alt="cat">
+   </div>
+   -->
+   <!--запрещено-->
+   <!--
+   <a href="https://www.youtube.com/">YoyTube</a>
+   -->
+   <!--покрасить при нажатии ctrl-->
+   <!--
+   <style>
+      a {
+         margin-top: 150px;
+         margin-left: 50px;
+      }
+
+      div p {
+         width: 100px;
+         cursor: pointer;
+      }
+   </style>
+   <div class="tets">
+      <p>word</p>
+      <p>apple</p>
+      <p>banana</p>
+      <p>dsvsdv</p>
+      <p>football</p>
+      <p>backetboll</p>
+   </div>
+   -->
+   <!--Drag'n'Drop с событиями мыши-->
+   <!--ball управление клавой-->
+   <!--
+   <style>
+      .ball {
+         position: absolute;
+         width: 80px;
+         height: 80px;
+         border-radius: 100%;
+         background-color: black;
+      }
+
+      .basket {
+         position: absolute;
+         right: 20px;
+         width: 180px;
+         height: 180px;
+         background-color: grey;
+      }
+
+      .conteiner {
+         display: flex;
+      }
+
+      .sum-basket {
+         position: fixed;
+         right: 250px;
+      }
+   </style>
+   <div class="conteiner">
+      <div class="ball"></div>
+      <div class="sum-basket">
+         <p>Корзина: <span class="sum">0</span></p>
+      </div>
+      <div class="basket"></div>
+   </div>
+   -->
+   <!--валидация-->
+   <!--
+   <input id="text" type="text">
+   -->
+   <!--scroll нескинчений-->
+   <!--
+   <div class="text" style="width: 150px;">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dolorem magnam nostrum sed perspiciatis aliquam
+      praesentium. Maiores fugiat possimus aspernatur, deleniti reiciendis facere harum tempore facilis quam tempora
+      consectetur nihil, quas unde. Odio incidunt beatae dolor inventore nesciunt maxime aut esse dolorem, perspiciatis,
+      dolores minima amet laboriosam aliquam ex adipisci iste provident. Sapiente placeat deleniti non numquam
+      voluptatum eius esse unde commodi quos culpa, magni enim explicabo eligendi quam. Placeat, expedita cumque
+      corrupti illo temporibus perferendis blanditiis ad! Cum corrupti explicabo accusamus soluta commodi quo quam omnis
+      amet autem enim animi alias cupiditate maiores cumque eaque voluptatem saepe aspernatur, similique consequatur ea
+      corporis velit numquam? Modi beatae magni earum incidunt voluptatem animi commodi quisquam voluptatibus voluptatum
+      ipsam quo corporis laboriosam illum ut voluptas libero, vitae saepe repellat consectetur nihil rem sint
+      asperiores? Consequatur ut a quaerat eligendi. Aperiam sed quia quis doloremque est ex rerum itaque, tenetur nulla
+      ducimus ullam culpa dignissimos odio ab voluptatem. Earum odit temporibus debitis est? Recusandae, consequatur.
+      Inventore nostrum, aperiam placeat illo enim nulla sit ea quasi modi autem vero fuga ullam nobis voluptatum
+      numquam iure, quo maiores rem repudiandae facilis minus laborum natus. Quisquam odio soluta corrupti officiis fuga
+      nobis, neque magnam sint quaerat, autem facere fugit sapiente suscipit ratione sequi laudantium cupiditate. Iusto
+      nisi id illum est incidunt sequi rem hic vero. Officiis esse similique obcaecati animi aut, possimus eveniet rerum
+      temporibus nam praesentium a ratione magni, placeat, voluptatum quod eius eum amet accusamus. Ab, earum
+      perferendis. Alias possimus, error aut obcaecati soluta non quidem atque, autem corporis incidunt amet eveniet?
+      Similique labore reprehenderit ullam, repudiandae consequuntur nihil, ea error, sint nesciunt earum magnam
+      repellendus animi minima alias ducimus a vero provident. Perferendis, maiores. Blanditiis consequuntur reiciendis
+      quo unde qui cupiditate! Possimus quas voluptate modi debitis ab nisi, sunt inventore rem ipsa, sapiente nesciunt!
+      Accusantium assumenda mollitia nemo deserunt iste et vero dignissimos molestiae iusto explicabo animi facilis, hic
+      libero atque ad? Totam a molestias quis fuga cupiditate quae, consequuntur iste velit! Aut, praesentium, nemo
+      tenetur voluptatem consectetur inventore quam nihil molestias architecto, cupiditate facilis officiis dicta. Iure
+      aliquid accusamus voluptatem consectetur sed nisi nesciunt a. Quod repellat quisquam quidem excepturi eaque quam?
+      Praesentium ab quasi ipsum maiores? Vitae doloribus sapiente veritatis recusandae libero earum commodi rerum? Aut
+      nemo hic quo incidunt repudiandae, ipsa consectetur rem error, nam quas obcaecati veniam illo magnam adipisci
+      reprehenderit ut, dolorem culpa ex ea? Laudantium, rem voluptatum. Perspiciatis nostrum cumque modi magnam enim
+      eveniet numquam sunt totam non quaerat, aliquid laborum earum possimus soluta ullam magni sit fugiat alias illo
+      facilis, debitis culpa officia at quod. Tempora cum id neque error amet nihil laudantium aspernatur ratione,
+      maiores fugit distinctio corrupti quas quos quam architecto magnam porro est minus voluptatibus repudiandae nobis
+      aut illo? Recusandae doloremque voluptatibus odit consectetur voluptatum aliquam nobis deserunt soluta rem itaque,
+      perferendis iste architecto porro consequuntur molestiae tenetur necessitatibus optio culpa ab! Numquam ut, fugit
+      obcaecati reiciendis sit labore atque nihil vel quas? Doloremque nostrum ea fuga odio, blanditiis sunt
+      exercitationem cumque fugit.
+   </div>
+-->
    <script src=" script.js"></script>
 </body>
 
